--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     username: c##sfproject
     password: 1
 
+
 server:
   port: 8088
+mybatis:
+  mapper-locations: classpath:/mapper/*.xml
 
