--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@192.168.1.100:1521:xe
-    username: c##smartfarm
+    username: c##sf_project
     password: 1
     
-  server:
+server:
   port: 8081
