--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,11 @@ spring:
     password: 1
     
 server:
-  port: 8080
+  port: 8081
 
-mybatis :
+mybatis:
+  mapper-locations: classpath:/mapper/*.xml
+
 
 
 #server:
